# .xmonad

./: .gitignore  .xinitrc  Main.hs  MyXMonad.cabal  README.md  build  my-xmonad.cabal  stack.yaml  xmonad.hs
scripts/: check_cmd.sh  control-brightness.sh  control-monitors.sh  control-volume.sh  exit.sh  rebuild.sh  screencast.sh  screenshot.sh
scripts/rofi/: launchpad.sh
